src/objects/PSG_User_Role__c.object
<CustomObject>
    <description>Junction between PSG Users and Accounts</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PSG User Roles</relationshipLabel>
        <relationshipName>PSG_User_Roles</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>External_Account_Team_Role_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>External Account Team Role Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Integration_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Integration key because psg does not keep salesforce ids static.</description>
        <externalId>true</externalId>
        <label>Integration Key</label>
        <length>75</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PSG_User__c</fullName>
        <label>PSG User</label>
        <referenceTo>PSG_User__c</referenceTo>
        <relationshipLabel>PSG User Roles</relationshipLabel>
        <relationshipName>PSG_User_Roles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Market Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional VP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revenue Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Line Managers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recontracting Approver</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>PSG User Role</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>PSG_User__c</columns>
        <columns>Role__c</columns>
        <columns>Integration_Key__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>External_Account_Team_Role_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PUR-{00000000}</displayFormat>
        <label>Role Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PSG User Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>